--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" class="loading">
+<html class="no-js">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="style/style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+	<script src="https://github.com/Modernizr/Modernizr/raw/master/modernizr.js"></script>
+	<script>
+		// Wait for window load
+		$(window).load(function() {
+			// Animate loader off screen
+			$("#loader").animate({
+				top: -200
+			}, 1500);
+		});
+	</script>
 	<script src="js/script.js"></script>
 </head>
 <body>
+<img src="images/preloader.gif" id="loader">
+<img src="http://farm6.static.flickr.com/5299/5400751421_55d49b2786_o.jpg">
 	<div class="container">
 		<div class="profile__teaser">
 			<div class="profile__left-section">
@@ -28,7 +40,11 @@
 		</div>
 	</div>
 
-	<div class="se-pre-con"></div>
+<div id="loader" class="pageload-overlay" data-opening="M 0,0 80,-10 80,60 0,70 0,0" data-closing="M 0,-10 80,-20 80,-10 0,0 0,-10">
+	<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none">
+		<path d="M 0,70 80,60 80,80 0,80 0,70"/>
+	</svg>
+</div>
 </body>
 
 </html>
