update markup for modernizr.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="style/style.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
-	<script src="https://github.com/Modernizr/Modernizr/raw/master/modernizr.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
 	<script>
 		// Wait for window load
 		$(window).load(function() {
