--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@ $(window).load(function() {
 </head>
 <body>
 	<div class="loader"></div>
+	<header>
+		<div class="logo">
+			<h1>MY TEMP REPO</h1>
+		</div>
+		<div class="navigation">
+			<ul class="menu">
+				<li><a href="#">HOME</a></li>
+				<li><a href="#">ABOUT</a></li>
+				<li><a href="#">CONTACT US</a></li>
+			</ul>
+		</div>
+		<div class="search__wrapper">
+			<form action="" autocomplete="on">
+				<input id="search" name="search" type="text" placeholder="What're you looking for?"><input id="search_submit" value="Rechercher" type="submit">
+			</form>
+		</div>
+	</header>
 	<div class="container">
 		<div class="profile__teaser">
 			<div class="profile__left-section">
@@ -24,7 +41,7 @@ $(window).load(function() {
 
 			<div class="profile__right-section">
 				<div class="profile__name">
-					<h1>Williams Test</h1>
+					<h1>MURTAZA ALVI</h1>
 				</div>
 
 				<div class="profile__short-description">
