--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="style/style.css">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript">
-$(window).load(function() {
-	$(".loader").fadeOut("slow");
-})
-</script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript">
+		$(window).load(function() {
+			$(".loader").fadeOut("slow");
+		})
+	</script>
 	<script src="js/script.js"></script>
 </head>
 <body>
@@ -49,7 +50,26 @@ $(window).load(function() {
 				</div>
 			</div>
 		</div>
-	</div>
+		</div>
+
+	<footer>
+		<div class="rel">
+			<div class="rel__container">
+				<ul class="rel__master">
+					<li><a href="#"><i class="fa fa-mobile"></i></a></li>
+					<li><a href="#"><i class="fa fa-heart"></i></a></li>
+					<li><a href="#"><i class="fa fa-child"></i></a></li>
+					<li><a href="#"><i class="fa fa-industry"></i></a></li>
+					<li><a href="#"><i class="fa fa-pencil"></i></a></li>
+					<li><a href="#"><i class="fa fa-laptop"></i></a></li>
+					<li><a href="#"><i class="fa fa-user-secret"></i></a></li>
+					<li><a href="#"><i class="fa fa-bicycle"></i></a></li>
+					<li><a href="#"><i class="fa fa-phone"></i></a></li>
+					<li><a href="#"><i class="fa fa-paper-plane"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
