--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
 <body>
 	<div class="loader"></div>
 	<header>
-		<div class="logo">
-			<h1>MY TEMP REPO</h1>
-		</div>
-		<div class="navigation">
-			<ul class="menu">
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">ABOUT</a></li>
-				<li><a href="#">CONTACT US</a></li>
-			</ul>
-		</div>
-		<div class="search__wrapper">
-			<form action="" autocomplete="on">
-				<input id="search" name="search" type="text" placeholder="What're you looking for?"><input id="search_submit" value="Rechercher" type="submit">
-			</form>
+		<div class="header__master">
+			<div class="logo">
+				<h1>MY TEMP REPO</h1>
+			</div>
+			<div class="navigation">
+				<ul class="menu">
+					<li><a href="#">HOME</a></li>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">CONTACT US</a></li>
+				</ul>
+			</div>
+			<div class="search__wrapper">
+				<form action="" autocomplete="on">
+					<input id="search" name="search" type="text" placeholder="What're you looking for?"><input id="search_submit" value="Rechercher" type="submit">
+				</form>
+			</div>
 		</div>
 	</header>
+
 	<div class="container">
 		<div class="profile__teaser">
 			<div class="profile__left-section">
@@ -50,7 +53,7 @@
 				</div>
 			</div>
 		</div>
-		</div>
+	</div>
 
 	<footer>
 		<div class="rel">
