--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 	<header>
 		<div class="header__master">
 			<div class="logo">
-				<h1>MY TEMP REPO</h1>
+				<h1>[MY-TEMP-REPO]</h1>
 			</div>
+
 			<div class="navigation">
 				<ul class="menu">
 					<li><a href="#">HOME</a></li>
@@ -27,11 +28,13 @@
 					<li><a href="#">CONTACT US</a></li>
 				</ul>
 			</div>
+
 			<div class="search__wrapper">
 				<form action="" autocomplete="on">
-					<input id="search" name="search" type="text" placeholder="What're you looking for?"><input id="search_submit" value="Rechercher" type="submit">
+				<input id="search" name="search" type="text" placeholder="What're you looking for?"><input id="search_submit" type="submit">
 				</form>
 			</div>
+
 		</div>
 	</header>
 
